# aoai

./: README.md  SCENARIOS.md  pyproject.toml
tests/smoke/: conftest.py  test_admin_auth.py  test_chat_completions.py  test_dual_auth.py  test_embeddings.py  test_health_and_scenarios.py  test_log_conformance.py  test_oauth_token.py  test_resources_and_deployments.py  test_responses.py  test_responses_streaming.py  test_signing_key_race.py  test_streaming.py  test_tenants.py  test_unknown_openai_path.py  test_well_known.py
twins_aoai/: __init__.py  app.py  auth.py  crypto.py  errors.py  explainer.py  logs.py  models.py  sids.py  storage.py  tokens.py
twins_aoai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
twins_aoai/routes/: oauth_token.py  openai_data.py  well_known.py
twins_aoai/twin_plane/: auth.py  routes.py
twins_aoai_local/: config.py  host.py  pyproject.toml  storage_sqlite.py
twins_aoai_local/twins_aoai_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
