[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twins-aoai"
version = "0.1.0"
description = "Azure OpenAI digital twin for twins.la (data plane, dual-auth)"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0,<4.0",
    "requests>=2.31,<3.0",
    "twins-local>=0.2.0",
    "PyJWT[crypto]>=2.8,<3.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "openai>=1.50",
]

[tool.setuptools.packages.find]
include = ["twins_aoai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
